--- a/project.private.config.json
+++ b/project.private.config.json
@@ -20,5 +20,17 @@
     "ignoreDevUnusedFiles": true
   },
   "libVersion": "3.8.12",
-  "condition": {}
+  "condition": {
+    "miniprogram": {
+      "list": [
+        {
+          "name": "pages/strategy-pk/strategy-pk",
+          "pathName": "pages/strategy-pk/strategy-pk",
+          "query": "",
+          "scene": null,
+          "launchMode": "default"
+        }
+      ]
+    }
+  }
 }
